<resources>
    <string name="app_name">Довідник студентів</string>

    <string-array name="students_groups">
        <item>301</item>
        <item>302</item>
        <item>308</item>
        <item>309</item>
        <item>501м</item>
    </string-array>

    <string name="grp_number_txt">Номер групи:</string>
    <string name="faculty_txt">Факультет:</string>
    <string name="btn_ok_txt">OK</string>
    <string name="btn_grp_detail_txt">Детальніше</string>
    <string name="btn_show_list_txt">ПОКАЗАТИ СПИСОК</string>

    <string name="edu_level_txt">Рівень освіти: </string>
    <string name="edu_level_bachelor_txt">бакалавр</string>
    <string name="edu_level_master_txt">магістр</string>

    <string name="additional_fig_txt">Додаткові відомості: </string>
    <string name="contract_fig_txt">наявність контрактників</string>
    <string name="privilege_flg_txt">наявність пільговиків</string>
    
    <string name="btn_groups_txt">Студентські групи</string>
    <string name="btn_add">Додати групу</string>
    <string name="btn_share">Поділитися</string>
</resources>