<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/default_padding"
    tools:context=".StudentsGroupActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/default_padding">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:src="@drawable/group"
            android:contentDescription="Group Image" />

        <TextView
            android:id="@+id/grpNumberImageTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|end"
            android:textSize="@dimen/default_text_size"
            android:text="Група"
            android:textColor="@android:color/holo_red_dark" />

        <TextView
            android:id="@+id/facultyNameImageTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|start"
            android:layout_marginBottom="@dimen/default_padding"
            android:textSize="@dimen/default_text_size"
            android:text="Факультет"
            android:textColor="@android:color/holo_red_dark" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/grp_number_txt"
            android:textSize="@dimen/default_text_size" />

        <EditText
            android:id="@+id/grpNumberEdit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:ems="10"
            android:inputType="textPersonName"
            android:gravity="center"
            android:importantForAutofill="no" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/faculty_txt"
        android:textSize="@dimen/default_text_size"
        android:layout_marginTop="@dimen/default_padding" />

    <EditText
        android:id="@+id/facultyEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:importantForAutofill="no" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_padding">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_padding">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edu_level_txt"
                android:textSize="@dimen/default_text_size" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/edu_level_bachelor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edu_level_bachelor_txt" />

                <RadioButton
                    android:id="@+id/edu_level_master"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edu_level_master_txt" />
            </RadioGroup>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_padding">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/additional_fig_txt"
                android:textSize="@dimen/default_text_size" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/contract_flg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contract_fig_txt" />

                <CheckBox
                    android:id="@+id/privilege_flg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/privilege_flg_txt" />
            </LinearLayout>
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/btnok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="@dimen/default_padding"
        android:textSize="@dimen/default_text_size"
        android:text="@string/btn_ok_txt"
        android:onClick="onOkBntClick" />
</LinearLayout>
