<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".AddStudentsGroupActivity">

    <TextView
        android:id="@+id/textView_grp_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="56dp"  
        android:text="@string/grp_number_txt"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.4" />

    <EditText
        android:id="@+id/addGroupNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        
        app:layout_constraintBottom_toBottomOf="@+id/textView_grp_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView_grp_label"
        app:layout_constraintTop_toTopOf="@+id/textView_grp_label"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/textView_faculty_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/faculty_txt"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="@+id/textView_grp_label"
        app:layout_constraintTop_toBottomOf="@+id/addGroupNumber" />

    <EditText
        android:id="@+id/addFaculty"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/addGroupNumber"
        app:layout_constraintStart_toStartOf="@+id/addGroupNumber"
        app:layout_constraintTop_toBottomOf="@+id/textView_faculty_label"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/addBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:onClick="onGrpAddClick"
        android:text="@string/btn_ok_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addFaculty" />

</androidx.constraintlayout.widget.ConstraintLayout>